--- a/UI-Files/src/modules/Customer/pages/style.css
+++ b/UI-Files/src/modules/Customer/pages/style.css
@@ -11,3 +11,10 @@ img{
 .img{
     align-items: center;
 }
+.vendorname{
+    position: relative;
+    display: block;
+    margin-bottom: -1px;
+    border: 3px solid rgb(255, 255, 255);
+    padding: 3%;
+}
