--- a/UI-Files/src/modules/Customer/css/Style.css
+++ b/UI-Files/src/modules/Customer/css/Style.css
@@ -22,3 +22,39 @@
     position: relative;
     
 }
+
+.centered{
+    display:flex;
+    justify-content:center;
+    align-items:center
+}
+
+.right{
+    position: absolute;
+    bottom: 10px;
+    display:flex;
+    justify-content: right;
+    align-items: flex-start;
+}
+
+.listFood{
+    background: #ecf0f5;
+    border-width: 3px;
+    border-color: #3c8dbc;
+    border-style: double solid;
+    border-radius: 5px; 
+    padding: 2px; 
+    margin: auto; 
+    width: 80%;
+}
+
+.listRes{
+    background: #0b0c0c;
+    border-width: 3px;
+    border-color: #3c8dbc;
+    border-style: double solid;
+    border-radius: 5px; 
+    padding: 2px; 
+    margin: auto; 
+    width: 80%;
+}
