changed the design a bit for restaurant options

--- a/UI-Files/src/modules/Customer/css/Style.css
+++ b/UI-Files/src/modules/Customer/css/Style.css
@@ -49,7 +49,7 @@
 }
 
 .listRes{
-    background: #0b0c0c;
+    background: #f1f1e1;
     border-width: 3px;
     border-color: #3c8dbc;
     border-style: double solid;
