designed cart to its independent interface

--- a/UI-Files/src/modules/Customer/css/Style.css
+++ b/UI-Files/src/modules/Customer/css/Style.css
@@ -49,9 +49,9 @@
 }
 
 .listRes{
-    background: #f1f1e1;
-    border-width: 3px;
-    border-color: #3c8dbc;
+    background: #dbedff;
+    border-width: 4px;
+    border-color: #c0bf3c;
     border-style: double solid;
     border-radius: 5px; 
     padding: 2px; 
