--- a/UI-Files/src/modules/Customer/css/Style.css
+++ b/UI-Files/src/modules/Customer/css/Style.css
@@ -1,60 +1,75 @@
-.container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    min-height: 100vh;
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
 }
 
-
-
-.RestaurantName, h1{
-    text-align: center;
+.RestaurantName,
+h1 {
+  text-align: center;
 }
 
-.CustomerMenu, Button{
-    position: relative;
-
+.CustomerMenu,
+button {
+  position: relative;
 }
 
-.MenuList{
-    position: relative;
-    
+.MenuList {
+  position: relative;
 }
 
-.centered{
-    display:flex;
-    justify-content:center;
-    align-items:center
+.centered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.right{
-    position: absolute;
-    bottom: 10px;
-    display:flex;
-    justify-content: right;
-    align-items: flex-start;
+.right {
+  position: absolute;
+  bottom: 10px;
+  display: flex;
+  justify-content: right;
+  align-items: flex-start;
 }
 
-.listFood{
-    background: #ecf0f5;
-    border-width: 3px;
-    border-color: #3c8dbc;
-    border-style: double solid;
-    border-radius: 5px; 
-    padding: 2px; 
-    margin: auto; 
-    width: 80%;
+.listFood {
+  background: #ecf0f5;
+  border-width: 3px;
+  border-color: rgb(195, 27, 14);
+  border-style: double solid;
+  border-radius: 5px;
+  padding: 50px;
+  margin: auto;
+  width: 60%;
+  margin-bottom: 20px;
+  font-size: 30px;
 }
 
-.listRes{
-    background: #0b0c0c;
-    border-width: 3px;
-    border-color: #3c8dbc;
-    border-style: double solid;
-    border-radius: 5px; 
-    padding: 2px; 
-    margin: auto; 
-    width: 80%;
+.pad {
+  padding: 10px;
+  font-size: 30px;
+}
+
+.label {
+  font-size: 40px;
+}
+
+.butn {
+  font-size: 18px;
+}
+
+.cart {
+  background: #ecf0f5;
+  border-width: 3px;
+  border-color: rgb(195, 27, 14);
+  border-style: double solid;
+  border-radius: 5px;
+  padding: 50px;
+  margin: auto;
+  width: 55%;
+  margin-bottom: 20px;
+  font-size: 30px;
 }
